# genai-bench-rs

./: Cargo.toml  README.md
src/: cli.rs  client.rs  lib.rs  main.rs  metrics.rs  output.rs  plot.rs  runner.rs  scenario.rs  tokenizer.rs
tests/: cli_test.rs  client_test.rs  metrics_test.rs  output_test.rs  scenario_test.rs
