[package]
name = "genai-bench-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gbrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokenizers = { version = "0.21", features = ["http"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
comfy-table = "7"
rand = "0.9"
chrono = "0.4"
ctrlc = "3"
futures = "0.3"
tokio-stream = "0.1"
anyhow = "1"
